# waffice-fastapi

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  PLAN.md  SPEC.md  alembic.ini  docker-compose.yml  lint.bat  lint.sh  pyproject.toml  readme.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  task.md
.github/workflows/: ci.yml  deploy-dev.yaml  deploy-ecr.yaml  deploy-prod.yaml  lint.yaml
.ralph/: README.md  refactor-prompt.md  run.sh  start-prompt.txt
alembic/: env.py
alembic/versions/: 48d09036fcb7_add_user_activities_and_new_user_fields.py  59e1d704e6e2_rename_user_histories_to_audit_logs.py  796533bda978_add_graduation_status.py  a1b2c3d4e5f6_add_temp_member_support.py  c3f8a2e91d74_replace_team_name_with_project_id_in_user_activities.py  c951e903b294_add_approval_requests.py  d7e3f1a2b4c5_add_notification_fields_to_users.py  e2b1c4d5a6f7_expand_approval_requests.py  e5f6a7b8c9d0_replace_is_admin_with_role_enum.py  f414a90934a1_initial.py  f6a7b8c9d0e1_update_audit_action_enum_for_role.py
app/: __init__.py  exceptions.py  main.py
app/config/: __init__.py  cookies.py  database.py  migration.py  secrets.py
app/controllers/: project_controller.py  user-controller.py  user_controller.py  userhist_controller.py
app/docs/: user.md  추가사양.md
app/middleware/: csrf.py  (+1 more)
docs/: deployment.md  routes.md
tests/: conftest.py  test_auth.py  test_auth_jwt.py  test_auth_route.py  test_e2e.py  test_member_detail.py  test_requests.py  test_temp_members.py  test_user_api.py
(+48 files in other folders)
